Only show discrete score systems in Average column's menu. Only convert average if scoresystem is discrete.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ CHANGES
 2.6.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Removed attendance score systems from Average column's menu (https://launchpad.net/bugs/1258939)
 
 
 2.6.1 (2013-11-21)
