--- a/src/schooltool/gradebook/locales/es.po
+++ b/src/schooltool/gradebook/locales/es.po
@@ -8,15 +8,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: schooltool\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-08-23 12:11+0300\n"
-"PO-Revision-Date: 2013-08-23 09:20+0000\n"
-"Last-Translator: Javier Nicolás <Unknown>\n"
+"POT-Creation-Date: 2013-11-21 02:52+0200\n"
+"PO-Revision-Date: 2013-11-24 18:16+0000\n"
+"Last-Translator: MauroJG <mgiamberardino@gmail.com>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-08-24 05:46+0000\n"
-"X-Generator: Launchpad (build 16738)\n"
+"X-Launchpad-Export-Date: 2013-11-25 06:11+0000\n"
+"X-Generator: Launchpad (build 16831)\n"
 "Language: es\n"
 
 #: /src/schooltool/gradebook/activity.py:52
@@ -32,11 +32,11 @@ msgstr "Actividades"
 #: /src/schooltool/gradebook/activity.py:301
 #: /src/schooltool/gradebook/browser/templates/f_course_worksheet_edit.pt:5
 msgid "Course Activities"
-msgstr ""
+msgstr "Actividades del curso"
 
 #: /src/schooltool/gradebook/activity.py:317
 msgid "Deployed Worksheets"
-msgstr ""
+msgstr "Hojas de trabajo desplegadas"
 
 #: /src/schooltool/gradebook/browser/activity.py:66
 #: /src/schooltool/gradebook/browser/gradebook.py:83
@@ -172,10 +172,12 @@ msgstr ""
 msgid ""
 "This value must be an integer.  You may award extra credit above this value."
 msgstr ""
+"Este valor debe ser un entero. Puede otorgar crédito adicional por encima de "
+"este valor."
 
 #: /src/schooltool/gradebook/browser/activity.py:363
 msgid "Minimum Score"
-msgstr ""
+msgstr "Puntaje mínimo"
 
 #: /src/schooltool/gradebook/browser/activity.py:364
 msgid "This value must be an integer."
@@ -210,7 +212,7 @@ msgstr "Añadir una actividad externa"
 
 #: /src/schooltool/gradebook/browser/activity.py:458
 msgid "External Score Source"
-msgstr ""
+msgstr "Fuente del puntaje externo"
 
 #: /src/schooltool/gradebook/browser/activity.py:468
 msgid ""
@@ -221,7 +223,7 @@ msgstr ""
 #: /src/schooltool/gradebook/browser/activity.py:480
 #: /src/schooltool/gradebook/browser/activity.py:589
 msgid "External Score Details"
-msgstr ""
+msgstr "Detalles del puntaje externo"
 
 #: /src/schooltool/gradebook/browser/activity.py:524
 #: /src/schooltool/gradebook/browser/report_card.py:751
@@ -270,11 +272,11 @@ msgstr "Actividad"
 
 #: /src/schooltool/gradebook/browser/activity.py:1033
 msgid "Linked Column"
-msgstr ""
+msgstr "Columna vinculada"
 
 #: /src/schooltool/gradebook/browser/activity.py:1034
 msgid "External Score"
-msgstr ""
+msgstr "Puntaje externo"
 
 #: /src/schooltool/gradebook/browser/category.py:57
 msgid "Categories"
@@ -326,7 +328,8 @@ msgstr "Categorías de actividades"
 msgid "Report Sheet Templates"
 msgstr "Plantillas de hojas de informas"
 
-#: /src/schooltool/gradebook/browser/configure.zcml:134
+#: /src/schooltool/gradebook/browser/configure.zcml:124
+#: /src/schooltool/gradebook/browser/templates/f_gradebook_overview.pt:9
 msgid "Add a Worksheet"
 msgstr "Añadir una hoja de trabajo"
 
@@ -484,7 +487,7 @@ msgstr "Esquema de Libreta de Notas"
 
 #: /src/schooltool/gradebook/browser/course_worksheets.py:76
 msgid "Course Worksheet Details"
-msgstr ""
+msgstr "Hoja de detalles del curso"
 
 #: /src/schooltool/gradebook/browser/course_worksheets.py:115
 msgid "Course Worksheet Template Information"
@@ -493,16 +496,16 @@ msgstr ""
 #: /src/schooltool/gradebook/browser/course_worksheets.py:157
 #: /src/schooltool/gradebook/browser/course_worksheets.py:167
 msgid "Course Activity Details"
-msgstr ""
+msgstr "Detalles de la actividad del curso"
 
 #: /src/schooltool/gradebook/browser/course_worksheets.py:218
 #: /src/schooltool/gradebook/browser/report_card.py:275
 msgid "-- Entire year --"
-msgstr ""
+msgstr "-- Año completo --"
 
 #: /src/schooltool/gradebook/browser/course_worksheets.py:308
 msgid "Worksheets for ${year}"
-msgstr ""
+msgstr "Hoja de trabajo para el ${year}"
 
 #: /src/schooltool/gradebook/browser/course_worksheets.py:329
 #: /src/schooltool/gradebook/browser/report_card.py:290
@@ -511,7 +514,7 @@ msgstr "-- Seleccione una plantilla --"
 
 #: /src/schooltool/gradebook/browser/course_worksheets.py:366
 msgid "Hide/unhide Deployed Worksheets for ${year}"
-msgstr ""
+msgstr "Ocultar/mostrar la hoja de trabajo desplegada para el ${year}"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:88
 #: /src/schooltool/gradebook/browser/flourish.zcml:601
@@ -567,7 +570,7 @@ msgstr "Ponderaciones de categoría"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:249
 msgid "New External Score"
-msgstr ""
+msgstr "Nuevo puntaje externo"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:269
 msgid "Edit Activity"
@@ -575,11 +578,11 @@ msgstr "Editar actividad"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:297
 msgid "Edit External Score"
-msgstr ""
+msgstr "Editar puntaje externo"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:317
 msgid "Grade Activity"
-msgstr ""
+msgstr "Actividad de grado"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:327
 #: /src/schooltool/gradebook/browser/templates/f_gradebook_overview.pt:89
@@ -598,12 +601,12 @@ msgstr "Puntuaciones"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:396
 msgid "Edit Category Weights"
-msgstr ""
+msgstr "Editar los Pesos de las Categorías"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:438
 #: /src/schooltool/gradebook/browser/templates/f_report_sheets.pt:58
 msgid "Report Sheet Template"
-msgstr ""
+msgstr "Plantilla de hoja de reporte"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:473
 #: /src/schooltool/gradebook/browser/templates/f_request_failing_report.pt:39
@@ -621,35 +624,35 @@ msgstr "Acción"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:548
 msgid "Hide/unhide Sheets"
-msgstr ""
+msgstr "Ocultar/mostrar Hojas"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:582
 msgid "My Grades"
-msgstr ""
+msgstr "Mis Grados"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:662
 msgid "Grid Column"
-msgstr ""
+msgstr "Columna de Cuadrícula"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:670
 msgid "Outline Item"
-msgstr ""
+msgstr "Elemento del Esquema"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:679
 msgid "New Grid Column"
-msgstr ""
+msgstr "Nueva Columna de Cuadrícula"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:688
 msgid "New Outline Item"
-msgstr ""
+msgstr "Nuevo Elemento de Esquema"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:697
 msgid "Edit Grid Column"
-msgstr ""
+msgstr "Editar Elemento de Cuadrícula"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:706
 msgid "Edit Outline Item"
-msgstr ""
+msgstr "Editar Elemento del Esquema"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:756
 #: /src/schooltool/gradebook/browser/flourish.zcml:768
@@ -684,7 +687,7 @@ msgstr ""
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:780
 msgid "Failures"
-msgstr ""
+msgstr "Fallas"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:780
 #: /src/schooltool/gradebook/browser/report.zcml:50
@@ -699,6 +702,8 @@ msgstr ""
 msgid ""
 "Export report card data for every student in every section for the term."
 msgstr ""
+"Exportar las calificaciones para cada estudiante de cada sección para el "
+"período."
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:894
 #: /src/schooltool/gradebook/browser/flourish.zcml:920
@@ -982,14 +987,6 @@ msgstr ""
 msgid "Hide Trd."
 msgstr ""
 
-#: /src/schooltool/gradebook/browser/gradebook.py:2410
-#: /src/schooltool/gradebook/browser/templates/f_gradebook_grade_activity.pt:15
-#: /src/schooltool/gradebook/browser/templates/f_gradebook_overview.pt:24
-#: /src/schooltool/gradebook/browser/templates/gradebook_grade_activity.pt:37
-#: /src/schooltool/gradebook/browser/templates/gradebook_overview.pt:130
-msgid "Name"
-msgstr "Nombre"
-
 #: /src/schooltool/gradebook/browser/gradebook.py:2450
 #: /src/schooltool/gradebook/browser/templates/activities_overview.pt:47
 #: /src/schooltool/gradebook/browser/templates/hide_report_worksheet.pt:39
@@ -1013,8 +1010,7 @@ msgstr "Sistema de puntuación"
 msgid "Value"
 msgstr ""
 
-#. Default: ""
-#: /src/schooltool/gradebook/browser/pdf_views.py:203
+#: /src/schooltool/gradebook/browser/pdf_views.py:245
 msgid "Report Card: ${schoolyear}"
 msgstr "Informe de tarjeta: ${schoolyear}"
 
@@ -1114,7 +1110,19 @@ msgstr ""
 msgid "Instructors: ${instructors}"
 msgstr ""
 
-#: /src/schooltool/gradebook/browser/report.zcml:8
+#: /src/schooltool/gradebook/browser/pdf_views.py:1135
+msgid "Report Card"
+msgstr ""
+
+#: /src/schooltool/gradebook/browser/pdf_views.py:1150
+msgid "${student} report card"
+msgstr ""
+
+#: /src/schooltool/gradebook/browser/pdf_views.py:1397
+msgid "${student} detail report"
+msgstr ""
+
+#: /src/schooltool/gradebook/browser/report.zcml:10
 msgid "Contains scores from report sheets.  Formatted to be sent to parents."
 msgstr ""
 "Contiene las puntuaciones de hojas de informe. Formato que será envido a los "
@@ -1316,15 +1324,18 @@ msgstr "Fecha"
 msgid "Absences (continued)"
 msgstr ""
 
-#: /src/schooltool/gradebook/browser/rml/absences_by_day_rml.pt:16
-#: /src/schooltool/gradebook/browser/rml/absences_by_day_rml.pt:32
-msgid "Period Number"
-msgstr "Número de periodo"
+#: /src/schooltool/gradebook/browser/rml/report_card_student_header.pt:9
+msgid "Username: ${username}"
+msgstr ""
 
 #: /src/schooltool/gradebook/browser/rml/section_absences_rml.pt:17
 #: /src/schooltool/gradebook/browser/rml/section_absences_rml.pt:34
 msgid "Tardies"
 msgstr "Retrasos"
+
+#: /src/schooltool/gradebook/browser/rml/student_detail_report_attendance.pt:8
+msgid "Attendance detail"
+msgstr ""
 
 #: /src/schooltool/gradebook/browser/templates/add_edit_linked_column.pt:18
 #: /src/schooltool/gradebook/browser/templates/f_add_edit_linked_column.pt:25
@@ -1449,8 +1460,29 @@ msgstr ""
 msgid "There are no course activities."
 msgstr ""
 
+#: /src/schooltool/gradebook/browser/templates/f_course_worksheet_edit_related.pt:6
+msgid ""
+"The Course Worksheet and activities defined here can be deployed to all the "
+"sections of this course for one or more terms."
+msgstr ""
+
 #: /src/schooltool/gradebook/browser/templates/f_course_worksheet_templates.pt:17
 msgid "This course has no course worksheet templates."
+msgstr ""
+
+#: /src/schooltool/gradebook/browser/templates/f_course_worksheet_templates_related.pt:6
+msgid ""
+"Course Worksheets can be be used to include sets of activities in the "
+"gradebooks of all sections of a course. The activities included in Course "
+"Worksheets are defined in templates, shown here."
+msgstr ""
+
+#: /src/schooltool/gradebook/browser/templates/f_course_worksheet_templates_related.pt:12
+msgid ""
+"The templates can be created from this page (see Add: Course Worksheet) or "
+"from the individual gradebook of the instructor of a section of this course "
+"who is either a \"Responsible party\" for the course or a member of "
+"\"Clerks\" or \"Site Managers.\""
 msgstr ""
 
 #: /src/schooltool/gradebook/browser/templates/f_course_worksheets.pt:11
@@ -1496,13 +1528,34 @@ msgid ""
 "distinguishable name."
 msgstr ""
 
+#: /src/schooltool/gradebook/browser/templates/f_course_worksheets_related.pt:6
+msgid "This page allows you to manage the Course Worksheets for this course."
+msgstr ""
+
+#: /src/schooltool/gradebook/browser/templates/f_course_worksheets_related.pt:10
+msgid ""
+"The templates are created separately and define what activites will be on "
+"the Course Worksheets. Use this form to deploy the worksheets to the teacher "
+"gradebooks of all sections of this course for one or more terms."
+msgstr ""
+
+#: /src/schooltool/gradebook/browser/templates/f_course_worksheets_related.pt:16
+msgid "You can also hide worksheets if you do not want teachers to see them."
+msgstr ""
+
 #: /src/schooltool/gradebook/browser/templates/f_deploy_as_course_worksheet.pt:62
 msgid ""
 "If you add the same worksheet multiple times, give each version an easily "
 "distinguishable name."
 msgstr ""
 
-#: /src/schooltool/gradebook/browser/templates/f_gradebook_comment_cell_dialog.pt:5
+#: /src/schooltool/gradebook/browser/templates/f_deploy_as_course_worksheet_related.pt:6
+msgid ""
+"Use this form to add the active worksheet in your gradebook to all the "
+"sections of the same course in the selected terms."
+msgstr ""
+
+#: /src/schooltool/gradebook/browser/templates/f_gradebook_comment_cell_dialog.pt:3
 msgid "Enter Comment"
 msgstr ""
 
@@ -1558,11 +1611,7 @@ msgstr "S"
 msgid "Shortcut: Alt-S"
 msgstr "Atajo de teclado: Alt-S"
 
-#: /src/schooltool/gradebook/browser/templates/f_gradebook_overview.pt:127
-msgid "Done"
-msgstr ""
-
-#: /src/schooltool/gradebook/browser/templates/f_gradebook_overview.pt:132
+#: /src/schooltool/gradebook/browser/templates/f_gradebook_overview.pt:139
 msgid "Expand"
 msgstr ""
 
@@ -1868,7 +1917,7 @@ msgstr ""
 msgid "Enter numeric values for each relevant category."
 msgstr "Introduzca valores numéricos para cada categoría relevante."
 
-#: /src/schooltool/gradebook/browser/templates/f_weight_categories_related.pt:14
+#: /src/schooltool/gradebook/browser/templates/f_weight_categories_related.pt:13
 #: /src/schooltool/gradebook/browser/templates/weight_categories.pt:24
 msgid ""
 "For example, to weight exams as 60% of the grade, homework as 20% and "
@@ -1969,22 +2018,7 @@ msgstr "Crear Hoja de trabajo resumen"
 msgid "Grade ${name}"
 msgstr "Nota ${name}"
 
-#: /src/schooltool/gradebook/browser/templates/gradebook_grade_activity.pt:47
-#: /src/schooltool/gradebook/browser/templates/gradebook_overview.pt:181
-msgid "Apply a grade for all students:"
-msgstr "Aplicar una nota a todos los estudiantes:"
-
-#: /src/schooltool/gradebook/browser/templates/gradebook_overview.pt:48
-#: /src/schooltool/gradebook/browser/templates/mygrades.pt:15
-msgid "Term:"
-msgstr "Período:"
-
-#: /src/schooltool/gradebook/browser/templates/gradebook_overview.pt:77
-#: /src/schooltool/gradebook/browser/templates/mygrades.pt:33
-msgid "Section:"
-msgstr "Sección:"
-
-#: /src/schooltool/gradebook/browser/templates/gradebook_overview.pt:98
+#: /src/schooltool/gradebook/browser/templates/gradebook_overview.pt:88
 msgid "show only activities due in past ${num_weeks} weeks"
 msgstr ""
 "mostrar sólo actividades con fechas de cierre en las últimas ${num_weeks} "
@@ -2502,11 +2536,7 @@ msgstr "Limpiar"
 msgid "Showing ${count} of ${total} items"
 msgstr "Mostrando ${count} de ${total} items"
 
-#: /src/schooltool/requirement/browser/requirement.py:55
-msgid "Requirement index"
-msgstr "Índice de requisitos"
-
-#: /src/schooltool/requirement/browser/scoresystem.py:48
+#: /src/schooltool/requirement/browser/scoresystem.py:45
 msgid "The Title field must not be empty."
 msgstr "El título del campo no debería estar vacío."
 
@@ -2607,3 +2637,23 @@ msgstr "puntuación pasante:"
 #: /src/schooltool/requirement/browser/scoresystem_view.pt:3
 msgid "View Score System"
 msgstr "Ver sistema de puntuación"
+
+#: /src/schooltool/requirement/scoresystem.py:278
+msgid "Pass/Fail"
+msgstr ""
+
+#: /src/schooltool/requirement/scoresystem.py:285
+msgid "Letter Grade"
+msgstr ""
+
+#: /src/schooltool/requirement/scoresystem.py:295
+msgid "Extended Letter Grade"
+msgstr ""
+
+#: /src/schooltool/requirement/scoresystem.py:399
+msgid "Percent"
+msgstr ""
+
+#: /src/schooltool/requirement/scoresystem.py:404
+msgid "100 Points"
+msgstr ""
