--- a/src/schooltool/gradebook/locales/lt.po
+++ b/src/schooltool/gradebook/locales/lt.po
@@ -6,15 +6,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: schooltool\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2013-10-08 02:41+0300\n"
-"PO-Revision-Date: 2013-10-10 01:01+0300\n"
+"POT-Creation-Date: 2013-11-21 02:52+0200\n"
+"PO-Revision-Date: 2013-10-10 21:51+0000\n"
 "Last-Translator: Gediminas Paulauskas <menesis@pov.lt>\n"
 "Language-Team: Lithuanian\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-10-08 06:29+0000\n"
-"X-Generator: Launchpad (build 16799)\n"
+"X-Launchpad-Export-Date: 2013-11-22 06:05+0000\n"
+"X-Generator: Launchpad (build 16831)\n"
 "Language: lt\n"
 "X-Rosetta-Version: 0.1\n"
 
@@ -1288,7 +1288,8 @@ msgstr "Pasirinkite veiklą ataskaitai"
 
 #: /src/schooltool/gradebook/browser/request_reports.py:324
 msgid "You must specify both a report activity and a minimum passing score."
-msgstr "Turite nurodyti ir ataskaitos veiklą, ir mažiausią patenkinamą įvertį."
+msgstr ""
+"Turite nurodyti ir ataskaitos veiklą, ir mažiausią patenkinamą įvertį."
 
 #: /src/schooltool/gradebook/browser/request_reports.py:140
 msgid "Request Absences By Day Report"
@@ -1439,7 +1440,8 @@ msgstr ""
 "SchoolTool pažymių knygelė."
 
 #: /src/schooltool/gradebook/browser/templates/f_add_linked_activity_related.pt:10
-msgid "External score sources must be configured by your system administrator"
+msgid ""
+"External score sources must be configured by your system administrator"
 msgstr ""
 "Išoriniai pažymių šaltiniai turi būti paruošti sistemos administratoriaus."
 
@@ -1459,9 +1461,30 @@ msgstr "Nėra veiklos kategorijų."
 msgid "There are no course activities."
 msgstr "Nėra dalyko veiklų."
 
+#: /src/schooltool/gradebook/browser/templates/f_course_worksheet_edit_related.pt:6
+msgid ""
+"The Course Worksheet and activities defined here can be deployed to all the "
+"sections of this course for one or more terms."
+msgstr ""
+
 #: /src/schooltool/gradebook/browser/templates/f_course_worksheet_templates.pt:17
 msgid "This course has no course worksheet templates."
 msgstr "Šiam dalykui nėra dalyko lakštų šablonų."
+
+#: /src/schooltool/gradebook/browser/templates/f_course_worksheet_templates_related.pt:6
+msgid ""
+"Course Worksheets can be be used to include sets of activities in the "
+"gradebooks of all sections of a course. The activities included in Course "
+"Worksheets are defined in templates, shown here."
+msgstr ""
+
+#: /src/schooltool/gradebook/browser/templates/f_course_worksheet_templates_related.pt:12
+msgid ""
+"The templates can be created from this page (see Add: Course Worksheet) or "
+"from the individual gradebook of the instructor of a section of this course "
+"who is either a \"Responsible party\" for the course or a member of "
+"\"Clerks\" or \"Site Managers.\""
+msgstr ""
 
 #: /src/schooltool/gradebook/browser/templates/f_course_worksheets.pt:11
 msgid "Current Course Worksheets"
@@ -1506,13 +1529,34 @@ msgid ""
 "distinguishable name."
 msgstr ""
 
+#: /src/schooltool/gradebook/browser/templates/f_course_worksheets_related.pt:6
+msgid "This page allows you to manage the Course Worksheets for this course."
+msgstr ""
+
+#: /src/schooltool/gradebook/browser/templates/f_course_worksheets_related.pt:10
+msgid ""
+"The templates are created separately and define what activites will be on "
+"the Course Worksheets. Use this form to deploy the worksheets to the teacher "
+"gradebooks of all sections of this course for one or more terms."
+msgstr ""
+
+#: /src/schooltool/gradebook/browser/templates/f_course_worksheets_related.pt:16
+msgid "You can also hide worksheets if you do not want teachers to see them."
+msgstr ""
+
 #: /src/schooltool/gradebook/browser/templates/f_deploy_as_course_worksheet.pt:62
 msgid ""
 "If you add the same worksheet multiple times, give each version an easily "
 "distinguishable name."
 msgstr ""
 
-#: /src/schooltool/gradebook/browser/templates/f_gradebook_comment_cell_dialog.pt:5
+#: /src/schooltool/gradebook/browser/templates/f_deploy_as_course_worksheet_related.pt:6
+msgid ""
+"Use this form to add the active worksheet in your gradebook to all the "
+"sections of the same course in the selected terms."
+msgstr ""
+
+#: /src/schooltool/gradebook/browser/templates/f_gradebook_comment_cell_dialog.pt:3
 msgid "Enter Comment"
 msgstr "Įveskite komentarą"
 
@@ -1570,11 +1614,7 @@ msgstr "S"
 msgid "Shortcut: Alt-S"
 msgstr "Trumpinys: Alt-S"
 
-#: /src/schooltool/gradebook/browser/templates/f_gradebook_overview.pt:127
-msgid "Done"
-msgstr "Atlikta"
-
-#: /src/schooltool/gradebook/browser/templates/f_gradebook_overview.pt:132
+#: /src/schooltool/gradebook/browser/templates/f_gradebook_overview.pt:139
 msgid "Expand"
 msgstr "Išplėsti"
 
@@ -1619,7 +1659,8 @@ msgstr ""
 "mokytojų komentarus apie mokinius."
 
 #: /src/schooltool/gradebook/browser/templates/f_gradebook_templates_related.pt:10
-msgid "The first step in the process is to create a new report sheet template."
+msgid ""
+"The first step in the process is to create a new report sheet template."
 msgstr "Pirmas žingsnis yra sukurti naują ataskaitos lakšto šabloną."
 
 #: /src/schooltool/gradebook/browser/templates/f_gradebook_templates_related.pt:15
@@ -1914,7 +1955,8 @@ msgstr ""
 msgid ""
 "The list of categories can be customized for your school by your system "
 "administrator."
-msgstr "Kategorijų sąrašas gali būti keičiamas tik sistemos administratoriaus."
+msgstr ""
+"Kategorijų sąrašas gali būti keičiamas tik sistemos administratoriaus."
 
 #: /src/schooltool/gradebook/browser/templates/f_worksheets.pt:5
 msgid "Reorder or Hide Worksheets"
@@ -1996,27 +2038,7 @@ msgstr "Sukurti apžvalgos lakštus"
 msgid "Grade ${name}"
 msgstr "Įvertinti ${name}"
 
-#: /src/schooltool/gradebook/browser/templates/gradebook_grade_activity.pt:37
-#: /src/schooltool/gradebook/browser/templates/gradebook_overview.pt:130
-msgid "Name"
-msgstr "Vardas"
-
-#: /src/schooltool/gradebook/browser/templates/gradebook_grade_activity.pt:47
-#: /src/schooltool/gradebook/browser/templates/gradebook_overview.pt:181
-msgid "Apply a grade for all students:"
-msgstr "Parašyti pažymį visiems mokiniams:"
-
-#: /src/schooltool/gradebook/browser/templates/gradebook_overview.pt:48
-#: /src/schooltool/gradebook/browser/templates/mygrades.pt:15
-msgid "Term:"
-msgstr "Semestras:"
-
-#: /src/schooltool/gradebook/browser/templates/gradebook_overview.pt:77
-#: /src/schooltool/gradebook/browser/templates/mygrades.pt:33
-msgid "Section:"
-msgstr "Kursas:"
-
-#: /src/schooltool/gradebook/browser/templates/gradebook_overview.pt:98
+#: /src/schooltool/gradebook/browser/templates/gradebook_overview.pt:88
 msgid "show only activities due in past ${num_weeks} weeks"
 msgstr ""
 
@@ -2513,11 +2535,7 @@ msgstr "Išvalyti"
 msgid "Showing ${count} of ${total} items"
 msgstr "Rodoma ${count} iš ${total} rezultatų"
 
-#: /src/schooltool/requirement/browser/requirement.py:55
-msgid "Requirement index"
-msgstr "Reikalavimų indeksas"
-
-#: /src/schooltool/requirement/browser/scoresystem.py:48
+#: /src/schooltool/requirement/browser/scoresystem.py:45
 msgid "The Title field must not be empty."
 msgstr "Pavadinimas negali būti tuščias."
 
@@ -2632,6 +2650,6 @@ msgstr "Raidės su ženklais"
 msgid "Percent"
 msgstr "Procentas"
 
-#: /src/schooltool/requirement/scoresystem.py:403
+#: /src/schooltool/requirement/scoresystem.py:404
 msgid "100 Points"
 msgstr "100 taškų"
