--- a/src/schooltool/gradebook/locales/ru.po
+++ b/src/schooltool/gradebook/locales/ru.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: schooltool\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-11-21 02:52+0200\n"
-"PO-Revision-Date: 2013-08-23 09:20+0000\n"
-"Last-Translator: dr&mx <dronmax@gmail.com>\n"
+"PO-Revision-Date: 2014-02-16 23:29+0000\n"
+"Last-Translator: mida <kovalenko1974@mail.ru>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-22 06:05+0000\n"
-"X-Generator: Launchpad (build 16831)\n"
+"X-Launchpad-Export-Date: 2014-02-17 06:06+0000\n"
+"X-Generator: Launchpad (build 16916)\n"
 "Language: ru\n"
 "X-Rosetta-Version: 0.1\n"
 
@@ -333,7 +333,8 @@ msgstr "Категории заданий"
 msgid "Report Sheet Templates"
 msgstr "Шаблоны листов отчётов"
 
-#: /src/schooltool/gradebook/browser/configure.zcml:134
+#: /src/schooltool/gradebook/browser/configure.zcml:124
+#: /src/schooltool/gradebook/browser/templates/f_gradebook_overview.pt:9
 msgid "Add a Worksheet"
 msgstr "Добавить рабочий лист"
 
@@ -1008,10 +1009,9 @@ msgstr "Система счёта"
 
 #: /src/schooltool/gradebook/browser/gradebook.py:2591
 msgid "Value"
-msgstr ""
+msgstr "Значение(я)"
 
-#. Default: ""
-#: /src/schooltool/gradebook/browser/pdf_views.py:203
+#: /src/schooltool/gradebook/browser/pdf_views.py:245
 msgid "Report Card: ${schoolyear}"
 msgstr "Форма отчёта: ${schoolyear}"
 
@@ -1076,11 +1076,11 @@ msgstr ""
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:657
 msgid "ABSENCES BY DAY"
-msgstr ""
+msgstr "отсутствия за день*"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:663
 msgid "absences by day report"
-msgstr ""
+msgstr "отсутствия согласно дневному отчету"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:664
 msgid "absences for ${day}"
@@ -1088,15 +1088,15 @@ msgstr ""
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:786
 msgid "SECTION ABSENCES"
-msgstr ""
+msgstr "Отсутствие секции(й)"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:790
 msgid "${section} absence report"
-msgstr ""
+msgstr "${section} отчет об отсутствии"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:806
 msgid "Teacher(s): ${instructors}"
-msgstr ""
+msgstr "Учитель(ница): ${instructors}"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:923
 msgid "Gradebook Report"
@@ -1108,19 +1108,19 @@ msgstr ""
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:986
 msgid "Instructors: ${instructors}"
-msgstr ""
+msgstr "Инструктор: ${instructors}"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:1135
 msgid "Report Card"
-msgstr ""
+msgstr "Табель успеваемости"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:1150
 msgid "${student} report card"
-msgstr ""
+msgstr "${student} табель успеваемости"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:1397
 msgid "${student} detail report"
-msgstr ""
+msgstr "${student} детали отчёта"
 
 #: /src/schooltool/gradebook/browser/report.zcml:10
 msgid "Contains scores from report sheets.  Formatted to be sent to parents."
@@ -1262,7 +1262,7 @@ msgstr "Заголовок пункта"
 
 #: /src/schooltool/gradebook/browser/request_reports.py:66
 msgid "Select a source"
-msgstr ""
+msgstr "Выберите источник"
 
 #: /src/schooltool/gradebook/browser/request_reports.py:110
 msgid "Select a score"
@@ -1270,7 +1270,7 @@ msgstr ""
 
 #: /src/schooltool/gradebook/browser/request_reports.py:158
 msgid "${value} is not valid in ${scoresystem}."
-msgstr ""
+msgstr "${value} не действительно в ${scoresystem}."
 
 #: /src/schooltool/gradebook/browser/request_reports.py:221
 #: /src/schooltool/gradebook/browser/request_reports.py:304
@@ -1323,7 +1323,7 @@ msgstr ""
 
 #: /src/schooltool/gradebook/browser/rml/report_card_student_header.pt:9
 msgid "Username: ${username}"
-msgstr ""
+msgstr "Имя пользователя: ${username}"
 
 #: /src/schooltool/gradebook/browser/rml/section_absences_rml.pt:17
 #: /src/schooltool/gradebook/browser/rml/section_absences_rml.pt:34
@@ -1366,11 +1366,16 @@ msgid ""
 "Likewise, if some of the default categories are not relevant to your school, "
 "remove them below."
 msgstr ""
+"В настоящее время списком доступных категорий для всех учителей управляют "
+"через эту форму. Таким образом, если бы один или несколько учителей хотели "
+"бы использовать категорию не в текущем списке, мэнеджер сайта может добавить "
+"его здесь. Аналогично, если некоторые категории по умолчанию не относятся к "
+"Вашей школе, удаляют их ниже."
 
 #. Default: "Remove"
 #: /src/schooltool/gradebook/browser/templates/categories.pt:33
 msgid "remove-button"
-msgstr ""
+msgstr "Удалить"
 
 #. Default: "Add"
 #: /src/schooltool/gradebook/browser/templates/categories.pt:42
@@ -1385,7 +1390,7 @@ msgstr "Изменить"
 #: /src/schooltool/gradebook/browser/templates/deploy_report_worksheet.pt:4
 #: /src/schooltool/gradebook/browser/templates/deploy_report_worksheet.pt:8
 msgid "Deploy Report Worksheet Template"
-msgstr ""
+msgstr "Разверните шаблон рабочего листа отчета"
 
 #: /src/schooltool/gradebook/browser/templates/deploy_report_worksheet.pt:16
 msgid "Template"
@@ -1511,7 +1516,7 @@ msgstr ""
 #: /src/schooltool/gradebook/browser/templates/f_report_sheets.pt:102
 #: /src/schooltool/requirement/browser/scoresystem.py:407
 msgid "Required input is missing."
-msgstr ""
+msgstr "Отсутствуют необходимые данные"
 
 #: /src/schooltool/gradebook/browser/templates/f_course_worksheets.pt:94
 msgid ""
@@ -2616,3 +2621,12 @@ msgstr ""
 #: /src/schooltool/requirement/scoresystem.py:404
 msgid "100 Points"
 msgstr ""
+
+#~ msgid "Name"
+#~ msgstr "Имя"
+
+#~ msgid "Period Number"
+#~ msgstr "Количество раз"
+
+#~ msgid "Term:"
+#~ msgstr "Период:"
