--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,9 +2,11 @@
 CHANGES
 =======
 
-2.7.0 (unreleased)
+2.7.0 (2014-04-12)
 ------------------
 
+- Added enrollment modes to gradebook
+- Added children gradebook for parents
 
 
 2.6.3 (2014-04-12)
