--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -10,6 +10,7 @@ CHANGES
 - Fix report cards broken after deleting a term (https://launchpad.net/bugs/1065381)
 - Sort terms by date in course/report worksheet views (https://launchpad.net/bugs/1311818)
 - Fix deploying report sheet using a shortened template title (https://launchpad.net/bugs/1290167)
+- Translate "Ave." string in student's gradebook (https://launchpad.net/bugs/1307136)
 
 
 2.6.3 (2014-04-12)
