--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 CHANGES
 =======
 
+2.9.2 (2015-02-23)
+------------------
+
+- Fixed editing on column averages row
+
+
 2.9.1 (2015-02-22)
 ------------------
 
