--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,10 +2,10 @@
 CHANGES
 =======
 
-2.9.6 (unreleased)
+2.9.6 (2015-05-19)
 ------------------
 
-- Nothing changed yet
+- Avoided creation of default Sheet1 worksheet
 
 
 2.9.5 (2015-05-18)
